# hawkeye

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  metis.db-journal
.github/workflows/: main.yml
public/html/: index.html  login.html  stats.html
public/scripts/: index.js  login.js  stats.js
public/styles/: styles.css
src/: main.rs
src/daemons/: groups.rs  jobs.rs  mod.rs
src/db/: lib.rs
src/parsing/: jobs.rs
src/remote/: auth.rs  command.rs
src/routes/: auth.rs  completed.rs  jobs.rs  login.rs  mod.rs  running.rs  search.rs  stats.rs
src/routes/api/: auth.rs
src/routes/pages/: completed.rs  login.rs  mod.rs  queued.rs  running.rs  search.rs  stats.rs
templates/: base.html  completed.html  login.html  navbar_jobs.html  running.html  search.html  stats.html
templates/layers/: base.html  job_table.html  navbar_jobs.html
templates/pages/: completed.html  login.html  queued.html  running.html  search.html  stats.html
