[package]
name = "hawkeye"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
askama = { version = "0.12.1", features = [ "serde-json" ] }
axum = "0.8.1"
axum-sessions = "0.6.1"
chrono = "0.4.39"
colored = "3.0.0"
futures = "0.3.31"
http = "1.2.0"
openssh = { version = "0.11.2", features = [ "native-mux" ] }
rusqlite = "0.33.0"
serde = "1.0.217"
time = "0.3.37"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = [ "fs", "cors" ] }
tower-sessions = "0.14.0"
